2008-10-28  Thomas Wood  <thomas@linux.intel.com>

	* clutter/clutter-color.c (param_color_set_default): Set the no copy
	flag when setting the default param spec value to prevent invalid
	frees.

2008-10-27  Neil Roberts  <neil@linux.intel.com>

	Bug 1189 - Backface culling

	* clutter/cogl/gl/cogl-texture.c (cogl_texture_polygon)
	(_cogl_texture_quad_sw, _cogl_texture_quad_hw):
	* clutter/cogl/gles/cogl-texture.c (cogl_texture_polygon)
	(_cogl_texture_quad_sw, _cogl_texture_quad_hw): Enable backface
	culling in GL if it is requested.

	* clutter/cogl/gles/cogl-texture.c (_cogl_texture_quad_sw)
	(_cogl_texture_quad_hw):
	* clutter/cogl/gl/cogl-texture.c (_cogl_texture_quad_sw)
	(_cogl_texture_quad_hw): Reorder the
	vertices so that they are counter-clockwise.

	* clutter/cogl/gles/cogl-context.h (CoglContext): 
	* clutter/cogl/gl/cogl-context.h (CoglContext): Added a flag to
	store whether backface culling is currently enabled.

	* clutter/cogl/gles/cogl.c (cogl_enable_backface_culling): 
	* clutter/cogl/gl/cogl.c (cogl_enable_backface_culling): New
	function

	* doc/reference/cogl/cogl-sections.txt: Add
	cogl_enable_backface_culling

2008-10-27  Neil Roberts  <neil@linux.intel.com>

	Bug 1196 - Texture border drawing problems

	* clutter/cogl/gl/cogl-texture.c (_cogl_texture_upload_subregion_to_gl)
	(_cogl_texture_upload_to_gl):

	* clutter/cogl/gles/cogl-texture.c (_cogl_texture_upload_to_gl)
	(_cogl_texture_upload_subregion_to_gl):
	
	When uploading data to a sliced texture, fill the waste pixels
	with copies of the edge of the real texture data. Otherwise the
	value of the waste pixels are undefined so it will show artifacts
	when the texture is scaled with GL_LINEAR and the pixels are
	blended in.

2008-10-22  Thomas Wood  <thomas@linux.intel.com>

	* tests/test-actors.c: Don't adjust the radius based on the number of
	actors

2008-10-21  Emmanuele Bassi  <ebassi@linux.intel.com>

	* clutter/clutter-color.[ch] (clutter_value_set_color): Constify